# technical-notes-blog

./: .gitignore  BLOG_DEPLOYMENT_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  TENSORFLOW_BLOG_COMPLETE.md  index.html
posts/apee-evaluation-ecosystem/: README.md  comprehensive_apee_study.md  index.html  pyproject.toml
posts/apee-evaluation-ecosystem/apee/: __init__.py  cli.py  models.py
posts/apee-evaluation-ecosystem/apee/agents/: __init__.py  base.py  ollama.py
posts/apee-evaluation-ecosystem/apee/anomaly/: __init__.py  alerts.py  detector.py  patterns.py
posts/apee-evaluation-ecosystem/apee/benchmarks/: __init__.py  analyzer.py  collaborative.py  datasets.py  runner.py
posts/apee-evaluation-ecosystem/apee/coordination/: PATTERNS.md  __init__.py  coordinator.py
posts/apee-evaluation-ecosystem/apee/dashboard/: __init__.py  api.py  server.py
posts/apee-evaluation-ecosystem/apee/evaluation/: EVALUATION_PATTERNS.md  __init__.py  adaptive.py  advanced_patterns.py  evaluator.py  llm_evaluator.py  quality.py  report.py
posts/apee-evaluation-ecosystem/code/: demo_apee.py  demo_apee_ollama.py  demo_report.json
posts/apee-evaluation-ecosystem/data/: advanced_evaluation_results_20251209_191355.json  apee_evaluation_results.json  apee_evaluation_results_calibrated.json  apee_evaluation_results_jury.json  apee_evaluation_results_progressive.json  evaluation_report.html  ollama_demo_report.json
posts/apee-evaluation-ecosystem/examples/: __init__.py  advanced_evaluation_demo.py  comprehensive_benchmark.py  full_evaluation.py  multi_agent_evaluation.py  multi_model_evaluation.py  phase6_demo.py  proper_apee_evaluation.py
posts/apee-evaluation-ecosystem/tests/: __init__.py  test_advanced_patterns.py  test_benchmarks.py  test_coordinator.py  test_models.py  test_quality.py
templates/: post-template.md
(+31 files in other folders)
