[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apee"
version = "0.1.0"
description = "Adaptive Poly-Agentic Evaluation Ecosystem - Framework for evaluating multi-agent AI systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "APEE Contributors" }
]
keywords = [
    "ai",
    "agents",
    "evaluation",
    "llm",
    "multi-agent",
    "benchmark",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "rich>=13.0.0",
]
all = [
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/ahjavid/technical-notes-blog"
Documentation = "https://ahjavid.github.io/technical-notes-blog/posts/apee-evaluation-ecosystem/"
Repository = "https://github.com/ahjavid/technical-notes-blog"

[tool.hatch.build.targets.wheel]
packages = ["apee"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
